# laba4-oop-kovalev

./: CMakeLists.txt  README.md
include/: array.h  figure.h  point.h  rectangle.h  square.h  triangle.h
src/: main.cpp
tests/: array_test.cpp  point_test.cpp  rectangle_test.cpp  square_test.cpp  triangle_test.cpp
